--- a/styles/style.css
+++ b/styles/style.css
@@ -13,14 +13,65 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  position: relative;
+  display: flex;
   /* parameters for the header section */
 }
 
-/* here we have two examples of selectors in order to remind you how to set styles for elements */
+.logo_place_header {
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  min-width: 154px;
+  max-height: 31px;
+  z-index: 1;
+}
+
+.header__title {
+  max-width: 730px;
+  align-self: center;
+  margin-right: 64px;
+  position: absolute;
+  left: 64px;
+  z-index: 2;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: bold;
+}
+
+.header__subtitle {
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+  width: 388px;
+  z-index: 2;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+
+.header__main-illustration {
+  position: absolute;
+  align-self: flex-end;
+  width: 765px;
+  height: 608;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+}
+
 .header__square-pic {
+  position: absolute;
+  top: 64px;
+  right: 0;
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+  
 }
+
+/* here we have two examples of selectors in order to remind you how to set styles for elements */
 
 /* including elements with key-value modifiers */
 .table__cell_theme_dark {
