--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,13 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
+.table__cell_theme_dark {
+  width: 200px;
+  color: white;
+  margin-right: 0;
+  margin-top: 80px;
+}
+
 .header {
   height: 100vh;
   min-height: 600px;
@@ -68,15 +75,45 @@
   height: 568px;
   width: 568px;
   background-color: #2f80ed;
-  
 }
 
-/* here we have two examples of selectors in order to remind you how to set styles for elements */
+.description {
+  display: flex;
+  justify-content: center;
+}
 
-/* including elements with key-value modifiers */
-.table__cell_theme_dark {
-  width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
+.two-columns {
+display: flex;
+justify-content: space-between;
+margin-top: 100px;
+margin-bottom: 100px;
+width: 80%;
+}
+
+.two-columns__brief {
+  width: 175px;
+  line-height: 1.2em;
+  font-size: 18px;
+  font-weight: normal;
+  color: #2f80ed;
+}
+
+.two-columns__main-text {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  min-width: 784px;
+}
+
+.two-columns__paragraph {
+  justify-content: space-between;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+} 
+
+.two-columns__span-accent {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: bold;
 }
