--- a/styles/style.css
+++ b/styles/style.css
@@ -9,13 +9,7 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-.table__cell_theme_dark {
-  width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
-}
-
+/* ---Header Section--- */
 .header {
   height: 100vh;
   min-height: 600px;
@@ -57,6 +51,15 @@
   font-weight: normal;
 }
 
+.header__link {
+  color: #2f80ed;
+  text-decoration: none;
+}
+
+.header__link:visited {
+  color: #2f80ed;
+}
+
 
 .header__main-illustration {
   position: absolute;
@@ -77,20 +80,22 @@
   background-color: #2f80ed;
 }
 
+
+/* ---Description Section--- */
 .description {
   display: flex;
   justify-content: center;
+  margin: 100px 0 0;
 }
 
 .two-columns {
 display: flex;
 justify-content: space-between;
-margin-top: 100px;
-margin-bottom: 100px;
 width: 80%;
 }
 
 .two-columns__brief {
+  margin-top: 0;
   width: 175px;
   line-height: 1.2em;
   font-size: 18px;
@@ -106,14 +111,227 @@ width: 80%;
 }
 
 .two-columns__paragraph {
-  justify-content: space-between;
+  margin-top: 0;
+  margin-bottom: 30px;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
 } 
 
+.two-columns__paragraph:last-of-type {
+  margin-bottom: 0;
+}
+
 .two-columns__span-accent {
   line-height: 34px;
   font-size: 24px;
   font-weight: bold;
+}
+
+
+/* ---Digits Section--- */
+.digits {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin: 100px 0 80px;
+} 
+
+.section-title {
+  margin: 0 auto;
+  text-align: center;
+  width: 60%;
+  line-height: 1.115em;
+  font-size: 60px;
+  font-weight: bold;
+}
+
+.section-subtitle {
+  margin: 20px auto;
+  text-align: center;
+  width: 60%;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.table {
+  width: 1100px;
+  margin: 0 auto;
+  vertical-align: top;
+}
+
+
+.table__heading {
+  line-height: 1.15em;
+  font-size: 24px;
+  font-weight: bold;
+  text-align: left;
+  padding: 60px 0 20px;
+}
+
+.table__text {
+  width: 250px;
+  font-size: 18px;
+  font-weight: normal;
+  padding: 0 0 20px;
+}
+
+/* ---Feynman section--- */
+
+.feynman {
+  position: relative;
+  height: 90vh;
+  background-color: #f2f2f2;
+  background-image: url(../images/feynman.png);
+  background-position: bottom left;
+  background-repeat: no-repeat;
+}
+
+.feynman__title {
+  line-height: 1.15em;
+  font-size: 120px;
+  font-weight: bold;
+  width: 775px;
+  text-align: center;
+  margin: 0 auto;
+  padding-top: 100px;
+}
+
+.feynman__subtitle {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  text-align: center;
+  margin: 70px auto 0;
+}
+
+.feynman__link {
+  position: absolute;
+  right: 48px;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  color: #2f80ed;
+  text-decoration: none;
+}
+
+.feynman__link:visited {
+  color: #2f80ed;
+}
+
+/* ---Kaufman section--- */
+
+.kaufman {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  background-color: #1f1f1f;
+}
+
+.section-title_theme_dark {
+  line-height: 1.15em;
+  font-size: 60px;
+  font-weight: bold;
+  text-align: center;
+  color: white;
+  width: 60%;
+  margin: 0 auto;
+  padding-top: 90px;
+}
+
+
+.section-subtitle_theme_dark {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  text-align: center;
+  color: white;
+  margin: 20px auto 0;
+  width: 60%;
+}
+
+.table_theme_dark {
+  position: relative;
+  z-index: 1;
+  margin: 80px auto 10px;
+}
+
+.table__cell_theme_dark {
+  color: white;
+  text-align: left;
+  vertical-align: top;
+}
+
+.table__heading_theme_dark {
+  width: 200px;
+  padding-bottom: 20px;
+}
+
+.table__text_theme_dark {
+  width: 200px;
+  padding: 0 0 80px;
+}
+
+
+.kaufman__triangle {
+  position: absolute;
+  right: -210px;
+  top: 0;
+  width: 877px;
+  height: 877px;
+}
+
+/* ---Footer---*/
+
+.footer {
+  background-color: #1f1f1f;
+}
+
+.footer__columns {
+
+}
+
+.footer__column_content_copyright {
+
+}
+
+.footer__column_content_info {
+
+}
+
+.footer__column_content_social {
+
+}
+
+.footer__author {
+ line-height: 25px;
+ font-size: 18px;
+ font-weight: normal;
+ color: white;
+}
+
+.footer__column-heading {
+  line-height: 45px;
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
+}
+
+.footer__column-links {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  color: white;
+  text-decoration: none;
+}
+
+.footer__social-icon {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  color: white;
+  text-decoration: none;
+
 }
