--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,6 @@
   max-height: 756px;
   position: relative;
   display: flex;
-  /* parameters for the header section */
 }
 
 .logo_place_header {
@@ -60,7 +59,6 @@
   color: #2f80ed;
 }
 
-
 .header__main-illustration {
   position: absolute;
   align-self: flex-end;
@@ -85,13 +83,13 @@
 .description {
   display: flex;
   justify-content: center;
-  margin: 100px 0 0;
 }
 
 .two-columns {
 display: flex;
 justify-content: space-between;
 width: 80%;
+margin: 100px 0 0;
 }
 
 .two-columns__brief {
@@ -181,11 +179,12 @@ width: 80%;
 
 .feynman {
   position: relative;
-  height: 90vh;
+  height: 790px;
   background-color: #f2f2f2;
   background-image: url(../images/feynman.png);
   background-position: bottom left;
   background-repeat: no-repeat;
+  background-size: 867px 637px;
 }
 
 .feynman__title {
@@ -287,22 +286,32 @@ width: 80%;
 
 .footer {
   background-color: #1f1f1f;
+  position: relative;
+  min-height: 350px;
 }
 
 .footer__columns {
-
+  padding: 60px auto 40px;
+  margin: 0 auto 0;
+  width: 90%;
+  display: flex;
+  padding: 60px 0 40px;
+  justify-content: space-between;
 }
 
 .footer__column_content_copyright {
-
+  flex-basis: 711px;
+  display: flex;
 }
 
 .footer__column_content_info {
-
+  display: flex;
+  flex-direction: column;
 }
 
 .footer__column_content_social {
-
+  display: flex;
+  flex-direction: column;
 }
 
 .footer__author {
@@ -310,13 +319,16 @@ width: 80%;
  font-size: 18px;
  font-weight: normal;
  color: white;
+ align-self: flex-end;
 }
 
 .footer__column-heading {
   line-height: 45px;
+  margin: 0;
   font-size: 18px;
   font-weight: bold;
   color: white;
+  padding-bottom: 20px;
 }
 
 .footer__column-links {
@@ -324,6 +336,7 @@ width: 80%;
   font-size: 18px;
   font-weight: normal;
   color: white;
+  padding-bottom: 20px;
   text-decoration: none;
 }
 
@@ -333,5 +346,12 @@ width: 80%;
   font-weight: normal;
   color: white;
   text-decoration: none;
+  padding-bottom: 10px;
+}
 
+.logo_place_footer {
+  size: 183px 35px;
+  position: absolute;
+  left: 5%;
+  top: 60px;
 }
