--- a/styles/style.css
+++ b/styles/style.css
@@ -291,11 +291,10 @@ margin: 100px 0 0;
 }
 
 .footer__columns {
-  padding: 60px auto 40px;
   margin: 0 auto 0;
   width: 90%;
   display: flex;
-  padding: 60px 0 40px;
+  padding: 60px 0 0;
   justify-content: space-between;
 }
 
