--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,14 @@
   max-width: 1600px;
   margin: 0 auto;
   font-family: 'Helvetica Neue', Arial, sans-serif;
+  box-sizing: border-box;
+}
+
+.heading, .text, .list, .list-item {
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  font-weight: normal;
 }
 
 /* ---Header Section--- */
@@ -27,23 +35,24 @@
 .header__title {
   max-width: 730px;
   align-self: center;
-  position: absolute;
-  left: 64px;
-  z-index: 2;
+  margin-left: 64px;
   line-height: 96px;
   font-size: 102px;
   font-weight: bold;
+  position: relative;
+  z-index: 2;
 }
 
 .header__subtitle {
-  width: 388px;
+  max-width: 388px;
   position: absolute;
   left: 64px;
   bottom: 30px;
-  z-index: 2;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
+  position: relative;
+  z-index: 2;
 }
 
 .header__link {
@@ -78,19 +87,19 @@
 .description {
   display: flex;
   justify-content: center;
+  padding: 100px 0 0;
 }
 
 .two-columns {
   display: flex;
   justify-content: space-between;
   width: 80%;
-  margin: 100px 0;
 }
 
 .two-columns__brief {
   margin-top: 0;
-  width: 175px;
-  line-height: 1.2em;
+  max-width: 175px;
+  line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
   color: #2f80ed;
@@ -99,12 +108,11 @@
 .two-columns__main-text {
   display: flex;
   flex-direction: column;
-  width: 80%;
+  max-width: 80%;
   min-width: 784px;
 }
 
 .two-columns__paragraph {
-  margin-top: 0;
   margin-bottom: 30px;
   line-height: 34px;
   font-size: 24px;
@@ -123,13 +131,13 @@
 /* ---Digits Section--- */
 .digits {
   position: relative;
-  padding: 0 0 100px;
+  padding: 100px 0;
 } 
 
 .section-title {
   margin: 0 auto;
-  width: 60%;
-  line-height: 1.115em;
+  max-width: 60%;
+  line-height: 1.15;
   font-size: 60px;
   font-weight: bold;
   text-align: center;
@@ -138,35 +146,35 @@
 .section-subtitle {
   margin: 20px auto 0;
   text-align: center;
-  width: 60%;
+  max-width: 60%;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
 }
 
 .table {
-  width: 1100px;
+  max-width: 1100px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-
+  padding: 0;
 }
 
 .table__cell {
   list-style: none;
-  margin-top: 60px;   
+  margin-top: 60px; 
+  max-width: 250px;   
 }
 
 .table__heading {
-  line-height: 1.15em;
+  line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
   padding-bottom: 20px;
 }
 
 .table__text {
-  max-width: 250px;
   font-size: 18px;
   font-weight: normal;
   padding-bottom: 20px;
@@ -176,22 +184,22 @@
 
 .feynman {
   position: relative;
-  height: 790px;
+  min-height: 790px;
   background-color: #f2f2f2;
   background-image: url(../images/feynman.png);
   background-position: bottom left;
   background-repeat: no-repeat;
   background-size: 867px 637px;
+  padding-top: 100px;
 }
 
 .feynman__title {
-  line-height: 1.15em;
+  line-height: 1.15;
   font-size: 120px;
   font-weight: bold;
-  width: 775px;
+  max-width: 775px;
   text-align: center;
   margin: 0 auto;
-  padding-top: 100px;
 }
 
 .feynman__subtitle {
@@ -225,33 +233,19 @@
   flex-direction: column;
   overflow: hidden;
   background-color: #1f1f1f;
-  padding: 0 0 90px;
+  padding: 90px 0;
+  background-image: url("../images/kaufman-triangle.svg");
+  background-repeat: no-repeat;
+  background-size: 877px 877px;
+  background-position: right -210px top 0;
 }
 
 .section-title_theme_dark {
-  line-height: 1.15em;
-  font-size: 60px;
-  font-weight: bold;
-  text-align: center;
   color: white;
-  width: 60%;
-  margin: 0 auto;
-  padding-top: 90px;
 }
 
 .section-subtitle_theme_dark {
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: normal;
-  text-align: center;
   color: white;
-  margin: 20px auto 0;
-}
-
-.table_theme_dark {
-  z-index: 1;
-  margin: 0 auto;
-  width: 70%;
 }
 
 .table__cell_theme_dark {
@@ -261,65 +255,50 @@
 
 .table__heading_theme_dark {
   color: white;
-  padding-bottom: 20px;
-  line-height: 1.15em;
-  font-size: 24px;
-  font-weight: bold;
 }
 
 .table__text_theme_dark {
   color: white;
-  line-height: 1.2em;
-  font-size: 18px;
-  font-weight: normal;
-}
-
-
-.kaufman__triangle {
-  position: absolute;
-  right: -210px;
-  top: 0;
-  width: 877px;
-  height: 877px;
 }
 
 /* ---Footer---*/
 
 .footer {
   background-color: #1f1f1f;
-  position: relative;
   min-height: 350px;
+  padding: 60px 0 40px;
+  position: relative;
+  display: flex;
 }
 
 .footer__columns {
-  margin: 0 auto 0;
   width: 90%;
+  margin: 0 auto;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
-  padding: 60px 0 0;
+}
+
+.footer__column {
+  display: flex;
+  flex-direction: column;
 }
 
 .footer__column_content_copyright {
   flex-basis: 711px;
-  display: flex;
+  justify-content: space-between;
 }
 
-.footer__column_content_info {
-  display: flex;
-  flex-direction: column;
-}
-
-.footer__column_content_social {
-  display: flex;
-  flex-direction: column;
+.logo_place_footer {
+  width: 183px;
+  height: 35px;
 }
 
 .footer__author {
- align-self: flex-end;
- line-height: 25px;
- font-size: 18px;
- font-weight: normal;
- color: white;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  color: white;
 }
 
 .footer__column-heading {
@@ -332,6 +311,10 @@
 }
 
 .footer__column-links {
+  list-style: none;
+}
+
+.footer__column-link {
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
@@ -341,17 +324,5 @@
 }
 
 .footer__social-icon {
-  line-height: 30px;
-  font-size: 18px;
-  font-weight: normal;
-  color: white;
-  text-decoration: none;
-}
-
-.logo_place_footer {
-  width: 183px;
-  height: 35px;
-  position: absolute;
-  left: 5%;
-  top: 60px;
+  padding-right: 10px;
 }
