--- a/styles/style.css
+++ b/styles/style.css
@@ -34,8 +34,8 @@
 
 .header__title {
   max-width: 730px;
+  margin: 0 0 0 64px;
   align-self: center;
-  margin-left: 64px;
   line-height: 96px;
   font-size: 102px;
   font-weight: bold;
@@ -112,7 +112,7 @@
 }
 
 .two-columns__paragraph {
-  margin-bottom: 30px;
+  margin: 0 0 030px;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
@@ -171,12 +171,18 @@
   font-size: 24px;
   font-weight: bold;
   padding-bottom: 20px;
+  margin: 0;
 }
 
 .table__text {
   font-size: 18px;
   font-weight: normal;
   padding-bottom: 20px;
+  margin: 0;
+}
+
+.table__text:last-of-type {
+  padding: 0;
 }
 
 /* ---Feynman section--- */
@@ -233,18 +239,18 @@
   overflow: hidden;
   background-color: #1f1f1f;
   padding: 90px 0;
-  background-image: url("../images/kaufman-triangle.svg");
-  background-repeat: no-repeat;
-  background-size: 877px 877px;
-  background-position: right -210px top 0;
 }
 
 .section-title_theme_dark {
   color: white;
+  position: relative;
+  z-index: 1;
 }
 
 .section-subtitle_theme_dark {
   color: white;
+  position: relative;
+  z-index: 1;
 }
 
 .table__cell_theme_dark {
@@ -254,10 +260,25 @@
 
 .table__heading_theme_dark {
   color: white;
+  position: relative;
+  z-index: 1;
 }
 
 .table__text_theme_dark {
   color: white;
+  position: relative;
+  z-index: 1;
+}
+
+.kaufman__triangle {
+  position: absolute;
+  top: 0;
+  right: -210px;
+  width: 877px;
+  height: 877px;
+  background-image: url("../images/kaufman-triangle.svg");
+  background-repeat: no-repeat;
+  background-size: 877px 877px;
 }
 
 /* ---Footer---*/
@@ -268,6 +289,7 @@
   padding: 60px 0 40px;
   position: relative;
   display: flex;
+  box-sizing: border-box;
 }
 
 .footer__columns {
@@ -298,6 +320,7 @@
   font-size: 18px;
   font-weight: normal;
   color: white;
+  margin: 18px 0;
 }
 
 .footer__column-heading {
@@ -311,6 +334,8 @@
 
 .footer__column-links {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .footer__column-link {
@@ -318,7 +343,7 @@
   font-size: 18px;
   font-weight: normal;
   color: white;
-  padding-bottom: 16px;
+  padding: 0 0 16px;
   text-decoration: none;
 }
 
