--- a/styles/style.css
+++ b/styles/style.css
@@ -7,13 +7,6 @@
   box-sizing: border-box;
 }
 
-.heading, .text, .list, .list-item {
-  margin: 0;
-  padding: 0;
-  font-size: 100%;
-  font-weight: normal;
-}
-
 /* ---Header Section--- */
 .logo_place_header {
   position: absolute;
@@ -52,6 +45,7 @@
   font-size: 18px;
   font-weight: normal;
   z-index: 2;
+  margin: 0;
 }
 
 .header__link {
@@ -112,7 +106,7 @@
 }
 
 .two-columns__paragraph {
-  margin: 0 0 030px;
+  margin: 0 0 30px;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
@@ -163,7 +157,7 @@
 .table__cell {
   list-style: none;
   margin-top: 60px;
-  max-width: 250px;
+  width: 250px;
 }
 
 .table__heading {
