--- a/pages/index.css
+++ b/pages/index.css
@@ -5,7 +5,9 @@
 @import url(../blocks/description/description.css);
 @import url(../blocks/two-columns/two-columns.css);
 @import url(../blocks/section-title/section-title.css);
+@import url(../blocks/section-title/_theme/section-title_theme_dark.css);
 @import url(../blocks/section-subtitle/section-subtitle.css);
+@import url(../blocks/section-subtitle/_theme/section-subtitle_theme_dark.css);
 @import url(../blocks/techniques/techniques.css);
 @import url(../blocks/cards/cards.css);
 @import url(../blocks/videos/videos.css);
@@ -14,3 +16,6 @@
 @import url(../blocks/feynman/feynman.css);
 @import url(../blocks/digits/digits.css);
 @import url(../blocks/table/table.css);
+@import url(../blocks/table/table_theme_dark.css);
+@import url(../blocks/khan/khan.css);
+@import url(../blocks/kaufman/kaufman.css);
