--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 /* ---General styling and perameters___ */
-/* .page {
+ .page {
   min-width: 1100px;
   max-width: 1600px;
   margin: 0 auto;
@@ -7,7 +7,7 @@
   box-sizing: border-box;
 }
 
-/* ---Header Section---
+/* ---Header Section---*/
 .logo_place_header {
   position: absolute;
   top: 30px;
@@ -78,7 +78,7 @@
 }
 
 
-/* ---Description Section--- 
+/* ---Description Section---*/
 .description {
   display: flex;
   justify-content: center;
@@ -122,7 +122,7 @@
   font-weight: bold;
 }
 
-/* ---Digits Section---
+/* ---Digits Section---*/
 .digits {
   position: relative;
   padding: 100px 0;
@@ -182,7 +182,7 @@
   padding: 0;
 }
 
-/* ---Feynman section---
+/* ---Feynman section---*/
 
 .feynman {
   position: relative;
@@ -350,7 +350,7 @@
 
 
 
-/*
+
 .techniques {
   padding: 100px 0;
   position: relative;
@@ -492,7 +492,7 @@ padding-bottom: 16px;
 
 
 
-/*
+
 .videos {
   position: relative;
 }
@@ -513,17 +513,9 @@ padding-bottom: 16px;
   padding-right: 0px;
 }
 
-
-
-
-
-
 .oakley {
   background-color:#f2f2f2;
   padding: 160px 0 80px;
   display: flex;
   justify-content: center;
 }
-
-
-*/
