--- a/blocks/feynman/__link/feynman__link.css
+++ b/blocks/feynman/__link/feynman__link.css
@@ -7,9 +7,18 @@
     font-weight: normal;
     color: #2f80ed;
     text-decoration: none;
+    opacity: 1;
+    transition: color .2s ease-in, opacity .2s ease-in;
+    -webkit-transition: color .2s ease-in, opacity .2s ease-in;
+    -moz-transition: color .2s ease-in, opacity .2s ease-in;
+    -o-transition: color .2s ease-in, opacity .2s ease-in;
   }
   
   .feynman__link:visited {
     color: #2f80ed;
   }
-  
+
+.feynman__link:hover {
+  color: #1f1f1f;
+  opacity: .5;
+}
