--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -1,18 +1,23 @@
-.header__link {
-    color: #2f80ed;
+.footer__column-link {
+    line-height: 30px;
+    font-size: 18px;
+    font-weight: normal;
+    color: white;
+    padding: 0 0 16px;
     text-decoration: none;
     opacity: 1;
     transition: color .2s ease-in, opacity .2s ease-in;
     -webkit-transition: color .2s ease-in, opacity .2s ease-in;
     -moz-transition: color .2s ease-in, opacity .2s ease-in;
     -o-transition: color .2s ease-in, opacity .2s ease-in;
+
   }
 
-  .header__link:visited {
-    color: #2f80ed;
-  }
+.footer__column-link:visited {
+    color: white;
+}
 
-  .header__link:hover {
-    color: #1f1f1f;
-    opacity: .5;
-  }
+.footer__column-link:hover {
+    color:#2f80ed;
+    opacity: .9;
+}
