--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -1,12 +1,23 @@
 .khan__buy-link {
-    line-height: 42px;
-    font-size: 30px;
-    font-weight: normal;
-    color:#2f80ed;
-    margin: 0;
-    text-decoration: none;
-  }
   
-  .khan__buy-link:visited {
-    color:#2f80ed;
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
+  color:#2f80ed;
+  margin: 0;
+  text-decoration: none;
+  opacity: 1;
+  transition: color .2s ease-in, opacity .2s ease-in;
+  -webkit-transition: color .2s ease-in, opacity .2s ease-in;
+  -moz-transition: color .2s ease-in, opacity .2s ease-in;
+  -o-transition: color .2s ease-in, opacity .2s ease-in;
+}
+  
+.khan__buy-link:visited {
+  color: #2f80ed;
   }
+
+.khan__buy-link:hover {
+  color: #1f1f1f;
+  opacity: .5;
+}
