--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,5 @@
 @import url(../blocks/page/page.css);
-@import url(../blocks/logo/logo.css);
-@import url(../blocks/logo/logo.css);
+@import url(../blocks/logo/_place/logo_place_header.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/description/description.css);
 @import url(../blocks/two-columns/two-columns.css);
@@ -19,3 +18,6 @@
 @import url(../blocks/table/table_theme_dark.css);
 @import url(../blocks/khan/khan.css);
 @import url(../blocks/kaufman/kaufman.css);
+@import url(../blocks/resources/resources.css);
+@import url(../blocks/logo/_place/logo_place_footer.css);
+@import url(../blocks/footer/footer.css);
