--- a/blocks/feynman/__link/feynman__link.css
+++ b/blocks/feynman/__link/feynman__link.css
@@ -8,10 +8,10 @@
     color: #2f80ed;
     text-decoration: none;
     opacity: 1;
-    transition: color .2s ease-in, opacity .2s ease-in;
-    -webkit-transition: color .2s ease-in, opacity .2s ease-in;
-    -moz-transition: color .2s ease-in, opacity .2s ease-in;
-    -o-transition: color .2s ease-in, opacity .2s ease-in;
+    transition: opacity .2s ease-in;
+    -webkit-transition: opacity .2s ease-in;
+    -moz-transition: opacity .2s ease-in;
+    -o-transition: opacity .2s ease-in;
   }
   
   .feynman__link:visited {
@@ -19,6 +19,5 @@
   }
 
 .feynman__link:hover {
-  color: #1f1f1f;
-  opacity: .5;
+  opacity: .7;
 }
