--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -6,10 +6,10 @@
     padding: 0 0 16px;
     text-decoration: none;
     opacity: 1;
-    transition: color .2s ease-in, opacity .2s ease-in;
-    -webkit-transition: color .2s ease-in, opacity .2s ease-in;
-    -moz-transition: color .2s ease-in, opacity .2s ease-in;
-    -o-transition: color .2s ease-in, opacity .2s ease-in;
+    transition: opacity .2s ease-in;
+    -webkit-transition: opacity .2s ease-in;
+    -moz-transition: opacity .2s ease-in;
+    -o-transition: opacity .2s ease-in;
 
   }
 
@@ -18,6 +18,5 @@
 }
 
 .footer__column-link:hover {
-    color:#2f80ed;
-    opacity: .9;
+    opacity: .7;
 }
