--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -2,10 +2,10 @@
     color: #2f80ed;
     text-decoration: none;
     opacity: 1;
-    transition: color .2s ease-in, opacity .2s ease-in;
-    -webkit-transition: color .2s ease-in, opacity .2s ease-in;
-    -moz-transition: color .2s ease-in, opacity .2s ease-in;
-    -o-transition: color .2s ease-in, opacity .2s ease-in;
+    transition: opacity .2s ease-in;
+    -webkit-transition: opacity .2s ease-in;
+    -moz-transition: opacity .2s ease-in;
+    -o-transition: opacity .2s ease-in;
   }
 
   .header__link:visited {
@@ -13,6 +13,5 @@
   }
 
   .header__link:hover {
-    color: #1f1f1f;
-    opacity: .5;
+    opacity: .7;
   }
