--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -7,10 +7,10 @@
   margin: 0;
   text-decoration: none;
   opacity: 1;
-  transition: color .2s ease-in, opacity .2s ease-in;
-  -webkit-transition: color .2s ease-in, opacity .2s ease-in;
-  -moz-transition: color .2s ease-in, opacity .2s ease-in;
-  -o-transition: color .2s ease-in, opacity .2s ease-in;
+  transition: opacity .2s ease-in;
+  -webkit-transition: opacity .2s ease-in;
+  -moz-transition: opacity .2s ease-in;
+  -o-transition: opacity .2s ease-in;
 }
   
 .khan__buy-link:visited {
@@ -18,6 +18,5 @@
   }
 
 .khan__buy-link:hover {
-  color: #1f1f1f;
-  opacity: .5;
+  opacity: .7;
 }
