--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -6,7 +6,7 @@
     position: relative;
     min-height: 790px;
     background-color: #f2f2f2;
-    background-image: url(/images/feynman.png);
+    background-image: url(../../images/feynman.png);
     background-position: bottom left;
     background-repeat: no-repeat;
     background-size: 867px 637px;
